crates/karva/tests/it/snapshots/it__basic__max_fail_stops_after_n_failures.snap
---
source: crates/karva/tests/it/basic.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--max-fail=2"
---
success: false
exit_code: 1
----- stdout -----
    Starting 4 tests across 1 worker
        FAIL [TIME] test_max_fail::test_first_fail
        FAIL [TIME] test_max_fail::test_second_fail

diagnostics:

error[test-failure]: Test `test_first_fail` failed
 --> test_max_fail.py:2:5
  |
2 | def test_first_fail():
  |     ^^^^^^^^^^^^^^^
3 |     assert False, 'boom 1'
  |
info: Test failed here
 --> test_max_fail.py:3:5
  |
2 | def test_first_fail():
3 |     assert False, 'boom 1'
  |     ^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | def test_second_fail():
  |
info: boom 1

error[test-failure]: Test `test_second_fail` failed
 --> test_max_fail.py:5:5
  |
3 |     assert False, 'boom 1'
4 |
5 | def test_second_fail():
  |     ^^^^^^^^^^^^^^^^
6 |     assert False, 'boom 2'
  |
info: Test failed here
 --> test_max_fail.py:6:5
  |
5 | def test_second_fail():
6 |     assert False, 'boom 2'
  |     ^^^^^^^^^^^^^^^^^^^^^^
7 |
8 | def test_third_fail():
  |
info: boom 2

────────────
     Summary [TIME] 2 tests run: 0 passed, 2 failed, 0 skipped

----- stderr -----
